Fix banner width on small screens

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -12,6 +12,7 @@
     left: 0;
     width: 100%;
     height: 20%;
+    min-height: 180px;
   }
 
   #central {
